# month-of-streaming

./: .gitignore  Dockerfile  README.md  culture-learnings.md  docker-compose.yml  pyproject.toml
backstage-playground/streaming-portal/: catalog-info.yaml
user_profile_service/app/: db.py  main.py  models.py  schemas.py
